--- a/gosu-core-api/pom.xml
+++ b/gosu-core-api/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <groupId>com.guidewire.gosu</groupId>
+    <groupId>org.gosu-lang.gosu</groupId>
     <artifactId>gosu-parent</artifactId>
-    <version>9-gosu-SNAPSHOT</version>
+    <version>0.10.4-SNAPSHOT</version>
     <relativePath>../gosu-parent/pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -12,54 +12,11 @@
   <name>Gosu :: Core API</name>
 
   <properties>
-    <gosu.version.properties>generated/gw/lang/gosu-version.properties</gosu.version.properties>
+    <generated.version.dir>${project.build.directory}/generated-sources/version</generated.version.dir>
+    <gosu.version.properties>${generated.version.dir}/gw/lang/gosu-version.properties</gosu.version.properties>
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>org.gosu-lang.gosu.managed</groupId>
-      <artifactId>gw-commons-cli</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.gosu-lang.gosu.managed</groupId>
-      <artifactId>gw-asm</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.gosu-lang.gosu.managed</groupId>
-      <artifactId>gw-asm-analysis</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.gosu-lang.gosu.managed</groupId>
-      <artifactId>gw-asm-commons</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.gosu-lang.gosu.managed</groupId>
-      <artifactId>gw-asm-tree</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.gosu-lang.gosu.managed</groupId>
-      <artifactId>gw-asm-util</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.gosu-lang.gosu.managed</groupId>
-      <artifactId>gw-commons-collections</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.gosu-lang.gosu.managed</groupId>
-      <artifactId>gw-xercesImpl</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.gosu-lang.gosu.managed</groupId>
-      <artifactId>gw-commons-logging</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.gosu-lang.gosu.managed</groupId>
-      <artifactId>gw-jetty</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.gosu-lang.gosu.managed</groupId>
-      <artifactId>gw-jetty-util</artifactId>
-    </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-launcher-api</artifactId>
@@ -70,10 +27,45 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
+      <groupId>org.gosu-lang.gosu.managed</groupId>
+      <artifactId>gw-commons-cli</artifactId>
+      <version>1.2-1</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.gosu-lang.gosu.managed</groupId>
+      <artifactId>gw-asm-util</artifactId>
+      <version>5.0.1</version>
+    </dependency>
+      <dependency>
+          <groupId>org.gosu-lang.gosu.managed</groupId>
+          <artifactId>gw-asm</artifactId>
+          <version>5.0.1</version>
+      </dependency>
+      <dependency>
+          <groupId>org.gosu-lang.gosu.managed</groupId>
+          <artifactId>gw-asm-analysis</artifactId>
+          <version>5.0.1</version>
+      </dependency>
+      <dependency>
+          <groupId>org.gosu-lang.gosu.managed</groupId>
+          <artifactId>gw-asm-commons</artifactId>
+          <version>5.0.1</version>
+      </dependency>
+      <dependency>
+          <groupId>org.gosu-lang.gosu.managed</groupId>
+          <artifactId>gw-asm-tree</artifactId>
+          <version>5.0.1</version>
+      </dependency>
+      <dependency>
+          <groupId>org.gosu-lang.gosu.managed</groupId>
+          <artifactId>gw-commons-collections</artifactId>
+          <version>3.2.1-3</version>
+      </dependency>
   </dependencies>
   <profiles>
     <profile>
@@ -87,7 +79,7 @@
             <dependency>
                 <groupId>com.sun</groupId>
                 <artifactId>tools</artifactId>
-                <version>1.6.0</version>
+                <version>1.7.0</version>
                 <scope>system</scope>
                 <systemPath>${java.home}/../lib/tools.jar</systemPath>
             </dependency>
@@ -109,7 +101,7 @@
             </goals>
             <configuration>
               <propertyPrefix>gosu</propertyPrefix>
-              <versionString>${platform.version}</versionString>
+              <versionString>${project.version}</versionString>
             </configuration>
           </execution>
         </executions>
@@ -124,12 +116,12 @@
             <phase>generate-sources</phase>
             <configuration>
               <target>
-                <echo message="writing POM version to ${gosu.version.properties}"/>
-                <echo message="gosu.version.major=${gosu.majorVersion}${line.separator}" file="${gosu.version.properties}"/>
-                <echo message="gosu.version.minor=${gosu.minorVersion}${line.separator}" file="${gosu.version.properties}" append="true"/>
-                <echo message="gosu.version.incremental=${gosu.incrementalVersion}${line.separator}" file="${gosu.version.properties}" append="true"/>
-                <echo message="gosu.version.build=${gosu.buildNumber}${line.separator}" file="${gosu.version.properties}" append="true"/>
-                <echo message="gosu.version.qualifier=${gosu.qualifier}${line.separator}" file="${gosu.version.properties}" append="true"/>
+                <echo message="writing POM version to ${gosu.version.properties}" />
+                <echo message="gosu.version.major=${gosu.majorVersion}${line.separator}" file="${gosu.version.properties}" />
+                <echo message="gosu.version.minor=${gosu.minorVersion}${line.separator}" file="${gosu.version.properties}" append="true" />
+                <echo message="gosu.version.incremental=${gosu.incrementalVersion}${line.separator}" file="${gosu.version.properties}" append="true" />
+                <echo message="gosu.version.build=${gosu.buildNumber}${line.separator}" file="${gosu.version.properties}" append="true" />
+                <echo message="gosu.version.qualifier=${gosu.qualifier}${line.separator}" file="${gosu.version.properties}" append="true" />
               </target>
             </configuration>
             <goals>
@@ -140,22 +132,39 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>2.2</version>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifestEntries>
+              <Contains-Sources>gs,gsx</Contains-Sources>
+            </manifestEntries>
+          </archive>
+        </configuration>
+      </plugin>
+      <!--
+      disable the maven-shade-plugin so that the final published pom doesn't have
+      hardcoded references to ${java.home}
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>1.5</version>
         <executions>
           <execution>
-            <id>attach-sources</id>
             <phase>package</phase>
             <goals>
-              <goal>jar-no-fork</goal>
+              <goal>shade</goal>
             </goals>
           </execution>
         </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-      </plugin>
+        <configuration>
+          <artifactSet>
+            <excludes>
+              <exclude>org.gosu-lang.gosu:gosu-launcher-api</exclude>
+              <exclude>org.gosu-lang.gosu:gosu-launcher-impl</exclude>
+            </excludes>
+          </artifactSet>
+        </configuration>
+      </plugin>-->
     </plugins>
   </build>
 </project>
