--- a/gosu-servlet/pom.xml
+++ b/gosu-servlet/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <groupId>com.guidewire.gosu</groupId>
+    <groupId>org.gosu-lang.gosu</groupId>
     <artifactId>gosu-parent</artifactId>
-    <version>9-gosu-SNAPSHOT</version>
+    <version>0.10.4-SNAPSHOT</version>
     <relativePath>../gosu-parent/pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -13,18 +13,20 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.guidewire.gosu</groupId>
+      <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-core-api</artifactId>
+      <version>0.10.4-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>com.guidewire.gosu</groupId>
+      <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-core</artifactId>
+      <version>0.10.4-SNAPSHOT</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>3.0.1</version>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
