--- a/ij-compiler-api/pom.xml
+++ b/ij-compiler-api/pom.xml
@@ -1,21 +1,27 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <groupId>org.gosu-lang.gosu</groupId>
+    <artifactId>gosu-parent</artifactId>
+    <version>0.10.4-SNAPSHOT</version>
+    <relativePath>../gosu-parent/pom.xml</relativePath>
+  </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>com.guidewire.pl</groupId>
-    <artifactId>pl-parent</artifactId>
-    <version>9-gosu-SNAPSHOT</version>
-    <relativePath>../pl-parent/pom.xml</relativePath>
-  </parent>
-
-  <groupId>com.guidewire.studio</groupId>
   <artifactId>ij-compiler-api</artifactId>
+
+  <name>Gosu :: Compiler API</name>
 
   <dependencies>
     <dependency>
-      <groupId>com.guidewire.gosu</groupId>
+      <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-core-api</artifactId>
+      <version>0.10.4-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.gosu-lang.gosu</groupId>
+      <artifactId>gosu-core</artifactId>
+      <version>0.10.4-SNAPSHOT</version>
+      <scope>runtime</scope>
     </dependency>
   </dependencies>
 
