--- a/ij-editor-devtools/pom.xml
+++ b/ij-editor-devtools/pom.xml
@@ -1,28 +1,70 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <groupId>org.gosu-lang.gosu</groupId>
+    <artifactId>gosu-parent</artifactId>
+    <version>0.10.4-SNAPSHOT</version>
+    <relativePath>../gosu-parent/pom.xml</relativePath>
+  </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>com.guidewire.studio</groupId>
-    <artifactId>ij-proj</artifactId>
-    <version>9-gosu-SNAPSHOT</version>
-    <relativePath>../ij-proj/pom.xml</relativePath>
-  </parent>
-
   <artifactId>ij-editor-devtools</artifactId>
-  <packaging>${ij.packaging}</packaging>
+  <name>Gosu :: IntelliJ IDEA Dev Tools </name>
+
+  <properties>
+    <ij.plugin>true</ij.plugin>
+  </properties>
 
   <dependencies>
     <dependency>
       <groupId>com.jetbrains.intellij.platform</groupId>
-      <artifactId>sdk</artifactId>
-      <type>pom</type>
-      <scope>provided</scope>
+      <artifactId>annotations</artifactId>
+      <version>IC-129.713</version>
+      <scope>system</scope>
+      <systemPath>${env.IDEA_HOME}/lib/annotations.jar</systemPath>
     </dependency>
-
+    <dependency>
+      <groupId>com.jetbrains.intellij.platform</groupId>
+      <artifactId>openapi</artifactId>
+      <version>IC-129.713</version>
+      <scope>system</scope>
+      <systemPath>${env.IDEA_HOME}/lib/openapi.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>com.jetbrains.intellij.platform</groupId>
+      <artifactId>idea</artifactId>
+      <version>IC-129.713</version>
+      <scope>system</scope>
+      <systemPath>${env.IDEA_HOME}/lib/idea.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>com.jetbrains.intellij.platform</groupId>
+      <artifactId>util</artifactId>
+      <version>IC-129.713</version>
+      <scope>system</scope>
+      <systemPath>${env.IDEA_HOME}/lib/util.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>com.jetbrains.intellij.platform</groupId>
+      <artifactId>extensions</artifactId>
+      <version>IC-129.713</version>
+      <scope>system</scope>
+      <systemPath>${env.IDEA_HOME}/lib/extensions.jar</systemPath>
+    </dependency>
     <dependency>
       <groupId>com.guidewire.studio</groupId>
       <artifactId>idea-gosu-plugin</artifactId>
+      <version>3.4-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>12.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.gosu-lang.gosu</groupId>
+      <artifactId>gosu-core</artifactId>
+      <version>0.10.4-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
