--- a/gosu-itcase-utils/pom.xml
+++ b/gosu-itcase-utils/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>org.gosu-lang.gosu</groupId>
     <artifactId>gosu-parent</artifactId>
-    <version>0.10.4-SNAPSHOT</version>
+    <version>GOSU-J8-SNAPSHOT</version>
     <relativePath>../gosu-parent/pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -22,12 +22,12 @@
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-core-api</artifactId>
-      <version>0.10.4-SNAPSHOT</version>
+      <version>GOSU-J8-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-process</artifactId>
-      <version>0.10.4-SNAPSHOT</version>
+      <version>GOSU-J8-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
