--- a/gosu-webservices/pom.xml
+++ b/gosu-webservices/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>org.gosu-lang.gosu</groupId>
     <artifactId>gosu-parent</artifactId>
-    <version>0.10.4-SNAPSHOT</version>
+    <version>GOSU-PERF-SNAPSHOT</version>
     <relativePath>../gosu-parent/pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -15,18 +15,18 @@
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-core-api</artifactId>
-      <version>0.10.4-SNAPSHOT</version>
+      <version>GOSU-PERF-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-core</artifactId>
-      <version>0.10.4-SNAPSHOT</version>
+      <version>GOSU-PERF-SNAPSHOT</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-xml</artifactId>
-      <version>0.10.4-SNAPSHOT</version>
+      <version>GOSU-PERF-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu.managed</groupId>
@@ -52,7 +52,7 @@
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-itcase-utils</artifactId>
-      <version>0.10.4-SNAPSHOT</version>
+      <version>GOSU-PERF-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
