--- a/idea-gosu-plugin/pom.xml
+++ b/idea-gosu-plugin/pom.xml
@@ -4,12 +4,12 @@
     <groupId>org.gosu-lang.gosu</groupId>
     <artifactId>gosu-parent</artifactId>
     <relativePath>../gosu-parent/pom.xml</relativePath>
-    <version>0.10.4-SNAPSHOT</version>
+    <version>GOSU-PERF-SNAPSHOT</version>
   </parent>
 
   <groupId>com.guidewire.studio</groupId>
   <artifactId>idea-gosu-plugin</artifactId>
-  <version>3.4-SNAPSHOT</version>
+  <version>3.4.PERF-SNAPSHOT</version>
 
   <name>Gosu :: IntelliJ IDEA Plugin </name>
 
@@ -36,7 +36,7 @@
       <plugin>
         <groupId>org.gosu-lang.gosu</groupId>
         <artifactId>gosu-maven-plugin</artifactId>
-        <version>0.10.4-SNAPSHOT</version>
+        <version>GOSU-PERF-SNAPSHOT</version>
         <executions>
           <execution>
             <goals>
@@ -183,24 +183,24 @@
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-core</artifactId>
-      <version>0.10.4-SNAPSHOT</version>
+      <version>GOSU-PERF-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-test-api</artifactId>
-      <version>0.10.4-SNAPSHOT</version>
+      <version>GOSU-PERF-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-itcase-utils</artifactId>
-      <version>0.10.4-SNAPSHOT</version>
+      <version>GOSU-PERF-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>ij-compiler-api</artifactId>
-      <version>0.10.4-SNAPSHOT</version>
+      <version>GOSU-PERF-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
