--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>org.gosu-lang.gosu</groupId>
   <artifactId>gosu-parent</artifactId>
-  <version>GOSU-J8-SNAPSHOT</version>
+  <version>1.X-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Gosu :: Parent POM</name>
