--- a/idea-gosu-plugin/pom.xml
+++ b/idea-gosu-plugin/pom.xml
@@ -4,12 +4,12 @@
     <groupId>org.gosu-lang.gosu</groupId>
     <artifactId>gosu-parent</artifactId>
     <relativePath>../gosu-parent/pom.xml</relativePath>
-    <version>GOSU-J8-SNAPSHOT</version>
+    <version>1.X-SNAPSHOT</version>
   </parent>
 
   <groupId>com.guidewire.studio</groupId>
   <artifactId>idea-gosu-plugin</artifactId>
-  <version>3.4.J8-SNAPSHOT</version>
+  <version>3.X-SNAPSHOT</version>
 
   <name>Gosu :: IntelliJ IDEA Plugin </name>
 
@@ -183,24 +183,24 @@
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-core</artifactId>
-      <version>GOSU-J8-SNAPSHOT</version>
+      <version>1.X-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-test-api</artifactId>
-      <version>GOSU-J8-SNAPSHOT</version>
+      <version>1.X-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>gosu-itcase-utils</artifactId>
-      <version>GOSU-J8-SNAPSHOT</version>
+      <version>1.X-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.gosu-lang.gosu</groupId>
       <artifactId>ij-compiler-api</artifactId>
-      <version>GOSU-J8-SNAPSHOT</version>
+      <version>1.X-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
