--- a/idea-gosu-plugin/src/main/resources/messages/Gosu.properties
+++ b/idea-gosu-plugin/src/main/resources/messages/Gosu.properties
@@ -95,6 +95,7 @@ inspection.object.equals.as.op=The "Object.equals()" can be replaced by the equa
 inspection.assert.is.reserved="assert" is a reserved keyword, it can be replaced by the identifier "_assert_" to upgrade your codebase
 inspection.expecting.iterable=The expression can be replaced by an interval
 inspection.ambiguous.call=The method call is ambiguous, it can by fixed by adding casts.
+inspection.wildcard=Wildcards are not supported in Gosu, run the quick-fix to solve the issue
 inspection.group.name.statement.issues=Statement issues
 inspection.while.to.for=The while loop can be replaced by a for loop
 inspection.case.mismatch=The name uses the incorrect case and can be fixed
