add method to base class to support some refactoring; change gosu version to 1.2.1-SNAPSHOT and plugin version to 3.6.1-SNAPSHOT

--- a/idea-gosu-plugin/META-INF/plugin.xml
+++ b/idea-gosu-plugin/META-INF/plugin.xml
@@ -32,7 +32,7 @@
     <li> Hyperlink to Gosu from stack traces
     </ul>
   ]]></description>
-
+    <version>3.6.1-SNAPSHOT</version>
     <version>${project.version}</version>
     <vendor email="gosu-lang@googlegroups.com" url="http://gosu-lang.org">Guidewire Software</vendor>
     <idea-version since-build="123.72"/>
